feat: add dependency, exclude tomcat

--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -31,7 +31,14 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	// tomcat 서버 제외
+	implementation('org.springframework.boot:spring-boot-starter-web')
+			{
+				exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat')
+			}
+
 	implementation 'io.netty:netty-all:latest.release'
+	implementation "commons-beanutils:commons-beanutils:1.9.4"
 }
 
 tasks.named('test') {
