--- a/reservation/src/main/resources/application-dev.yaml
+++ b/reservation/src/main/resources/application-dev.yaml
@@ -9,5 +9,8 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
+
+  main:
+    web-application-type: none
