--- a/reservation/src/test/resources/application-test.yaml
+++ b/reservation/src/test/resources/application-test.yaml
@@ -11,3 +11,12 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+
+  main:
+    web-application-type: none
+
+logging:
+  level:
+    org.springframework.transaction: DEBUG
+    org.springframework.orm.jpa.JpaTransactionManager: DEBUG
+#    org.springframework.jdbc.datasource.DataSourceTransactionManager: DEBUG
