--- a/reservation/src/main/resources/application-dev.yaml
+++ b/reservation/src/main/resources/application-dev.yaml
@@ -14,3 +14,9 @@ spring:
 
   main:
     web-application-type: none
+
+logging:
+  level:
+    org.springframework.transaction: DEBUG
+    org.springframework.orm.jpa.JpaTransactionManager: DEBUG
+#    org.springframework.jdbc.datasource.DataSourceTransactionManager: DEBUG
