--- a/reservation-saga/settings.gradle
+++ b/reservation-saga/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'reservation-saga'
-include 'core', 'user', 'business', 'item', 'record', 'server'
+include 'core', 'user', 'business', 'item', 'record', 'server', 'saga-orchestrator'
