--- a/reservation-saga/reservation/src/main/resources/application-dev.yaml
+++ b/reservation-saga/reservation/src/main/resources/application-dev.yaml
@@ -17,3 +17,7 @@ logging:
     org.springframework.transaction: DEBUG
     org.springframework.orm.jpa.JpaTransactionManager: DEBUG
 #    org.springframework.jdbc.datasource.DataSourceTransactionManager: DEBUG
+
+kafka:
+  bootstrap-servers: "192.168.35.5:9092,192.168.35.5:9093,192.168.35.5:9094"
+  schema-registry-url: "http://192.168.35.5:8081"
