--- a/reservation-saga/saga-orchestrator/build.gradle
+++ b/reservation-saga/saga-orchestrator/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation project(":messaging-core")
+    api project(":messaging-core")
     implementation "commons-beanutils:commons-beanutils:1.9.4"
     implementation 'com.google.guava:guava:33.2.1-jre'
 }
