refactor: refactor netty-core module

--- a/reservation-saga/netty-core/src/main/resources/application-dev.yaml
+++ b/reservation-saga/netty-core/src/main/resources/application-dev.yaml
@@ -9,11 +9,23 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-
+    properties:
+      hibernate:
+        format_sql=true:
 logging:
   level:
     org.springframework.transaction: DEBUG
     org.springframework.orm.jpa.JpaTransactionManager: DEBUG
+    io.confluent.kafka.serializers.protobuf:
+      KafkaProtobufSerializerConfig: WARN
+      KafkaProtobufDeserializerConfig: WARN
+    org.apache.kafka.clients.admin.AdminClientConfig: WARN
+    org.apache.kafka.clients.producer.ProducerConfig: WARN
+    org.apache.kafka.clients.consumer.ConsumerConfig: WARN
 #    org.springframework.jdbc.datasource.DataSourceTransactionManager: DEBUG
+
+kafka:
+  bootstrap-servers: "192.168.35.5:9092,192.168.35.5:9093,192.168.35.5:9094"
+  schema-registry-url: "http://192.168.35.5:8081"
