chore: modify gradle files.

--- a/reservation-saga/settings.gradle
+++ b/reservation-saga/settings.gradle
@@ -6,3 +6,6 @@ include 'reservable-item'
 include 'reservation'
 include 'common'
 include 'saga-orchestrator'
+include 'messaging-core'
+include 'messaging-schema'
+include 'messaging-adapter'
