--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -23,20 +23,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.kafka:spring-kafka'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-	// tomcat 서버 제외
-	implementation('org.springframework.boot:spring-boot-starter-web')
-			{
-				exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat')
-			}
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'io.netty:netty-all:latest.release'
 	implementation "commons-beanutils:commons-beanutils:1.9.4"
