--- a/reservation-saga/build.gradle
+++ b/reservation-saga/build.gradle
@@ -60,6 +60,9 @@ subprojects {
 		implementation 'io.netty:netty-all:latest.release'
 
 		implementation 'com.google.protobuf:protobuf-java:3.21.7'
+
+		implementation "org.springframework.boot:spring-boot-starter-actuator"
+		runtimeOnly "io.micrometer:micrometer-registry-prometheus"
 	}
 
 	tasks.named('test') {
