refactor: fix with missing Main-Class attribute in JAR build

--- a/reservation-saga/business/build.gradle
+++ b/reservation-saga/business/build.gradle
@@ -4,3 +4,11 @@ dependencies {
     implementation project(":messaging-schema")
     implementation project(":messaging-adapter")
 }
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
