chore: modify root build.gradle

--- a/reservation-saga/build.gradle
+++ b/reservation-saga/build.gradle
@@ -51,18 +51,12 @@ subprojects {
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
 
-		// tomcat 서버 제외
-		implementation('org.springframework.boot:spring-boot-starter-web')
-				{
-					exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat')
-				}
+		implementation('org.springframework.boot:spring-boot-starter-web') {
+			exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat')
+		}
 
 		implementation 'io.netty:netty-all:latest.release'
-
 		implementation 'com.google.protobuf:protobuf-java:3.21.7'
-
-		implementation "org.springframework.boot:spring-boot-starter-actuator"
-		runtimeOnly "io.micrometer:micrometer-registry-prometheus"
 	}
 
 	tasks.named('test') {
