--- a/reservation-saga/netty-core/src/main/resources/application-dev.yaml
+++ b/reservation-saga/netty-core/src/main/resources/application-dev.yaml
@@ -1,15 +1,6 @@
 spring.application.name: rsaga.netty-core
 
 spring:
-  datasource:
-    url: jdbc:mysql://192.168.35.179:3306/reservation-saga
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: master
-    password: master
-    hikari:
-      maximum-pool-size: 100 # 어느정도가 적당한지
-      minimum-idle: 20
-
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,6 +12,7 @@ spring:
           batch_size: 1000         # 한 번에 배치로 삽입할 엔티티 수
         order_inserts: true       # INSERT 문을 배치로 실행하도록 설정
         order_updates: true       # UPDATE 문을 배치로 실행하도록 설정
+        generate_statistics: false # 배치 실행되는지 확인 통계값
 
 logging:
   level:
